@startuml

title __ENUMS's Class Diagram__\n

  package nl.han.dea.marijn.database.enums {
    enum Aanbieder {
      VODAGONE
      ZIGGO
      text
    }
  }
  

  package nl.han.dea.marijn.database.enums {
    interface KeyValueEnum {
        {abstract} + getEnumValue()
        {abstract} + toString()
    }
  }
  

  package nl.han.dea.marijn.database.enums {
    enum Status {
      OPGEZEGD
      ACTIEF
      PROEF
      text
    }
  }
  

  package nl.han.dea.marijn.database.enums {
    enum Verdubbeling {
      STANDAARD
      VERDUBBELD
      NIETBESCHIKBAAR
      text
    }
  }
  

  Aanbieder -up-|> KeyValueEnum
  Status -up-|> KeyValueEnum
  Verdubbeling -up-|> KeyValueEnum


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
